# my-mcp

./: .markdownlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_STATUS.md  README.md  TESTING_STRATEGY.md  TODO.md  apify.json  mcp.json  run_all_tests.py  test_results.json
.claude/: CLAUDE.md  settings.json  statusline.sh
.claude/agents/: bug-fixer.md  code-architect.md  debug-frontend.sh  document-reviewer.md  fastapi-modular-architect.md  feature-developer.md  frontend-debugger.md  javascript-agent.md  layered-bug-fixer.md  project-initializer.md  rule-engine-architect.md  rust-agent.md  system-architect-agent.md
.claude/commands/ck/: add-api-endpoint.md  add-mcp-server-in-readme.md  add-slash-command.md  add-subagent.md  code-review.md  commands.json  create-feature.md  debug-frontend  deploy.md  doc-review.md  fix-issue.md  git-commit-push.md  init-project.md  rule-engine.md  security-review.md  testcase-review.md  testcases.md  update-docs.md  validate-config.md
.claude/skills/python-networkx-skill/: EXAMPLES.md  PROMPTS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md
.claude/templates/: .env.example  .gitignore  README.md  package.json  tsconfig.json
.gemini/commands/ck/: area-of.toml  changelog.toml  code-review.toml  commit.toml  doc-review.toml  fix-issue.toml  git-commit-push.toml  refactor.toml  rule-engine.toml  security-review.toml  testcase-review.toml
_git/: .doc-review-config.example  README.md
_git/hooks/: pre-commit
add-demo/: README.md  add_server.py  app_auth.py  app_context.py  app_images.py  app_resource.py  app_server.py  app_tool.py  pyproject.toml
docs/: ADVANCED.md  AGENTS.md  AUTO_DOCUMENTATION_FRAMEWORK.md  Agents-how-to.md  Agents-vs-Claude-md.md  CONTRIBUTING.md  Claude-md-how-to.md  DEVELOPMENT.md  INSTALL.md  TROUBLESHOOTING.md  knowledge-extraction-strategies.md
docs/architecture/hexagonal/: 01_domain_prompt.md  02_ports_prompt.md  03_adapters_prompt.md  README.md  glossary.md
prompts/: code-review.md
server/filesystem/: README.md  REQUIREMENTS.md  filesystem.py  pyproject.toml
server/filesystem/tests/: test_filesystem.py
server/networkx-mcp/: .gitignore  ARCHITECTURE.md  EXAMPLES.md  FEATURES.md  QUICKSTART.md  README.md  SETUP.md  claude_desktop_config.example.json  index.js  install.sh  package.json  test_dependencies.py  test_integration.py
server/trading/: .env.sample  README.md  REQUIREMENTS.md  cli.py  market_data.py  models.py  paper_account.json  paper_trading.py  pyproject.toml  pytest.ini  run_tests.py  trading.py  utils.py
server/trading/tests/: test_market_data.py  test_paper_trading.py  test_trading.py  test_utils.py
server/weather/: README.md  pyproject.toml  weather.py
server/weather/tests/: test_weather.py
tests/: expected_code_review_output.md  security_test_helper.py  test_code_review_security.py  test_command_bash_validation.py  test_mcp_integration.py  test_original_issue_scenario.py
tests/commands/: README.md  demo.py  requirements.txt  run_tests.py  test.sh  test_framework.py  test_specific_commands.py
(+5 files in other folders)
