[project]
name = "filesystem"
version = "0.1.0"
description = "MCP server for Mac filesystem analysis and disk cleanup"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.2.0",
    "psutil>=5.9.0",
    "send2trash>=1.8.0",
    "humanize>=4.0.0",
    "httpx>=0.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
filesystem-mcp = "filesystem:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.6"
]
