[project]
name = "trading"
version = "0.1.0"
description = "MCP server for stock trading with E*TRADE and other brokerages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.2.0",
    "httpx>=0.24.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyetrade>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pytest-asyncio>=0.23.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
trading-mcp = "trading:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.6"
]
